# kate-copilot

./: License  README.md  compile.ps1  compile.sh  metadata.json  package-lock.json  package.json
data/kate-copilot/: kate-copilot.py
src/: CMakeLists.txt  CopilotPlugin.cpp  CopilotPlugin.h  CopilotPlugin.json  CopilotView.cpp  CopilotView.h
